infrastructure/monitoring/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: dl-monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: digitallead-platform
    digitallead.com.br/id: PLT-602
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - grafana.app.digitallead.com.br
      secretName: grafana-tls

  rules:
    - host: grafana.app.digitallead.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
